# MAIE5532Assignment2

./: PARETO_FRONTIER_EXPLANATION.md  README.md  baseline_model.keras  best_model.keras  logger_utils.py  multi_scale_optimization_report.json  part1_baseline.py  part2_cloud_optimization.py  part3_edge_optimization.py  part4_deployment_pipeline.py  pyproject.toml  requirements.txt  streamlined_analysis.py  test.py
Report/: multi_scale_analysis.docx  ~$lti_scale_analysis.docx  ~WRL1627.tmp
part1_baseline/: baseline_model.keras  best_model.keras
part2_cloud_optimization/: student_model.keras  teacher_model.keras
part3_edge_optimization/: baseline_model.keras  dynamic_range.tflite  float16.tflite  full_integer.tflite
part4_deployment_pipeline/: edge_optimized_model.tflite
