[project]
name = "maie5532assignment2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "scipy>=1.13.1",
    "tensorflow-model-optimization>=0.8.0",
    "tensorflow[and-cuda]==2.15.1",
    "tf-keras>=2.15.1",
]
